<resources>
    <string name="app_name">Court Counter</string>
    <string name="logo">Team Logo</string>
    <string name="possession">possession</string>
    <string name="yellow_card">Yellow Card</string>
    <string name="red_card">Red Card</string>
    <string name="initial">0</string>
    <string name="initialPos">0%</string>
    <string name="initial_sB">0–0</string>
    <string name="corner_kicks">Corner Kicks</string>
    <string name="subs">Substitutions</string>
    <string name="reset">Reset</string>
    <string name="home_yellow">%d</string>
    <string name="home_red">%d</string>
    <string name="possession_home">%s</string>
    <string name="substitutions_home">%d</string>
    <string name="cornerKicks_home">%d</string>
    <string name="possession_away">%s</string>
    <string name="away_red">%d</string>
    <string name="cornerKicks_away">%d</string>
    <string name="Substitutions_away">%d</string>
    <string name="away_yellow">%d</string>
    <string name="Scores">%s–%s</string>
    <string name="Logo_league">Logo for the Premier League</string>
</resources>
